updated read me

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This only removes recently launched apps from the switcher. Meaning, only apps running will show up in the switcher.
+This tweak will remove the applications that are not running in the switcher. Enjoy, and please report anything that is not compatible with Remove Recents. 
 
-Enjoy :0)
+Cheers :)
+- EP
