updated read me

--- a/README
+++ b/README
@@ -1,4 +1,10 @@
-This tweak will remove the applications that are not running in the switcher. Enjoy, and please report anything that is not compatible with Remove Recents. 
+# RemoveRecents
+- Remove recently launched apps from the switcher
 
-Cheers :)
-- EP
+Required
+----------
+- iOS 4 - 13
+
+Useage
+----------
+- Install and enjoy
